# DynamicContract

./: Readme.md  pyproject.toml  replit.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ai_suggestion.py  comment.py  contract.py  presence.py  project.py  user.py  version.py
backend/app/schemas/: __init__.py  ai_suggestion.py  comment.py  contract.py  presence.py  project.py  security.py  user.py  version.py
backend/app/services/: ai_service.py  ai_suggestion_service.py  analytics_service.py  comment_service.py  contract_service.py  document_analyzer.py  presence_service.py  project_service.py  user_service.py  version_service.py
backend/app/websocket/: manager.py
backend/scripts/: create_migration.sh  start.sh
client/src/: App.tsx  index.css
client/src/components/analytics/: document-analytics.tsx
client/src/components/comments/: comment-panel.tsx  comment-thread.tsx
client/src/components/diff/: semantic-diff-viewer.tsx
client/src/components/editor/: ai-suggestions.tsx  (+2 more)
client/src/hooks/: use-contract.ts  use-presence.ts  use-websocket.ts
client/src/lib/: api.ts  websocket.ts
client/src/pages/: analytics.tsx  comments.tsx  contract-editor.tsx  contracts.tsx  dashboard.tsx  projects.tsx  version-history.tsx
client/src/types/: comment.ts  contract.ts  presence.ts
server/: routes.ts  storage.ts
shared/: schema.ts
(+13 files in other folders)
